<resources>
    <string name="app_name_title">Profesional Invoice Manager</string>
    <string name="app_name">ProfesionalInvoiceManager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_Industry">Actividad/Industria</string>
    <string name="menu_client">Cliente</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_product">Productos</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="apiKey">AIzaSyBw4BhLtnJazi9mWSppDMPrN_yXo6UyyCM</string>
    <string name="title_activity_industry">Industry</string>

    <!-- LoginActivity -->
    <string name="login_username">Email:</string>
    <string name="login_password">Contraseña:</string>
    <string name="login_signUp">Registrarse</string>

    <!-- Sign Up -->
    <string name="signUp_password">Contraseña</string>
    <string name="signUp_repeatPassword">Repetir Contraseña</string>
    <!-- IndustryFragment -->
    <string name="industry_name">Actividad</string>
    <string name="industry_address">Dirección del servicio</string>
    <string name="industry_mail">Mail</string>
    <string name="industry_telephone">Teléfono</string>
    <string name="industry_cellphone">Celular</string>

    <!-- Tax -->
    <string name="tax_Document">Documento</string>

    <!--ClientFragment-->
    <string name="client_name">Nombre</string>
    <string name="client_Lastname">Apellido</string>
    <string name="client_Adress">Dirección</string>

    <string name="harcode_login">Login </string>
    <string name="title_activity_sign_up">SignUp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addressCreateIndustry">Direccion</string>
    <string name="explainCreateIndustry">En esta sección debera registrar su negocio</string>
    <string name="emailIndustry">Email del servicio</string>
    <string name="phoneIndustry">Teléfono del servicio</string>
    <string name="cellPhoneIndustry">Celular del Servicio</string>
    <string name="datestartIndustry">Fecha de inicio de actividades</string>
    <string name="signUpTextButton">Registrarse</string>
    <string name="client_save">Guardar</string>
    <string name="emailSignUp">Email:</string>
    <string name="repeatPassSignUp">Repetir Contraseña</string>
    <string name="iibb">Ingresos Brutos</string>
    <string name="title_activity_product_create">Creacion de Producto</string>
    <string name="action_showInactive">Mostrar Inactivos</string>
    <string name="product_lblCode">Codigo:</string>
    <string name="product_lblName">Producto:</string>
    <string name="product_lblDesc">Descripcion:</string>
    <string name="product_lblUnit">Unidad:</string>
    <string name="product_lblUPrice">Precio:</string>
    <string name="home">Home</string>
    <string name="menu_home">Home</string>
    <string name="product_active">Activo:</string>
    <string name="product_key">Producto</string>
    <string name="service_key">Servicio</string>
    <string name="client_lblName">Nombre:</string>
    <string name="client_lblLastName">Apellido:</string>
    <string name="client_lblMail">E-Mail:</string>
    <string name="client_lblAdress">Dirección:</string>
    <string name="taxInfo_lblIibb">Ingresos Brutos:</string>
    <string name="taxInfo_lblDocNum">Documento:</string>
    <string name="taxInfo_lblDocType">Tipo de Documento:</string>
    <string name="taxInfo_lblIVA">Categoría IVA:</string>
    <string name="taxInfo_lblMonoCat">Categoría Monotributo:</string>
    <string name="client_active">Activo:</string>
    <string name="client_Mail">E-Mail</string>
    <string name="create_client">Agregar Cliente</string>
    <string name="create_product">Agregar Producto</string>
    <string name="bill">Facturar</string>
    <string name="menu_billing">Facturacion</string>
    <string name="menu_clients">Clientes</string>
    <string name="menu_mail">Mail</string>
    <string name="send_mail">Enviar Mail</string>
    <string name="taxInfo_IVACat">Categoría de IVA</string>
    <string name="taxInfo_DocType">Tipo de Documento</string>
    <string name="taxInfo_monoCat">Categoría Monnotributo</string>
    <string name="recoverPassword">Recuperar Password</string>
    <string name="cancel">Cancelar</string>
    <string name="dialog_message">¿Desea recuperar la contraseña?</string>
    <string name="dialog_title">Recuperacion de contraseña</string>
    <string name="home_add_customer">Agregar Cliente</string>
    <string name="home_add_customer_desc">Agrega un nuevo Cliente</string>
    <string name="home_add_product">Agregar Producto</string>
    <string name="home_add_product_desc">Agrega un nuevo Producto o Servicio</string>
    <string name="home_view_statics">Estadisticas</string>
    <string name="home_view_statics_desc">Ver estadisticas del sistema</string>
    <string name="home_edit_industry">Editar Datos</string>
    <string name="home_edit_industry_desc">Edita los datos de mi negocio</string>
    <string name="home_invoice_desc">Realizar una factura</string>
    <string name="home_invoice">Facturar</string>
    <string name="figures">Estadísticas</string>
    <string name="total_month">Cantidad Mensual de Facturas</string>
    <string name="total_year">Cantidad Anual de Facturas</string>
    <string name="total">Total:</string>
    <string name="statistics">Estadísticas</string>
    <string name="max_client">Máximo cliente</string>
    <string name="nombre">Nombre</string>
    <string name="billing_list_until">Fecha Hasta</string>
    <string name="billing_list_since">Fecha Desde</string>
    <string name="billing_list_filter">Filtro:</string>
    <string name="filter">Filtrar</string>
    <string name="invoice_lblIva">Condicion frente al iva</string>
    <string name="invoice_lblDoc">Tipo y Nro de Documento</string>
    <string name="invoice_lblCustomer">Cliente</string>
    <string name="invoice_lblAddress">Domicilio</string>
    <string name="invoice_lblMail">E-Mail</string>
    <string name="invoice_lblAmount">Monto</string>
    <string name="invoice_lblProduct">Producto</string>
    <string name="invoice_payment_condition">Condicion de Pago</string>
    <string name="invoice_lblInvoiceNumber">Nro. de Factura</string>
    <string name="title_activity_invoice_inspect">Ver Factura</string>
    <string name="invoice_data">Datos de la factura</string>
    <string name="billing_product_lbl">Productos</string>
    <string name="title_activity_invoice_create">Crear Factura</string>
    <string name="invoice_lblQuantity">Cantidad</string>
    <string name="login_name">Nombre y Apellido</string>
</resources>
