<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_custom"
            android:icon="@drawable/home2"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_industry"
            android:icon="@drawable/enterprise"
            android:title="@string/menu_Industry" />
        <item
            android:id="@+id/nav_clientList"
            android:icon="@mipmap/round_person_black_36"
            android:title="@string/menu_clients" />
        <item
            android:id="@+id/nav_ProductList"
            android:icon="@drawable/ic_product"
            android:title="@string/menu_product" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_statistics"
                android:icon="@drawable/statistics"
                android:title="@string/statistics" />
        </menu>
    </item>

</menu>
