<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home_custom">

    <fragment
        android:id="@+id/nav_industry"
        android:name="com.ort.profesionalinvoicemanager.views.IndustryFragment"
        android:label="@string/menu_Industry"
        />
    <fragment
        android:id="@+id/nav_home_custom"
        android:name="com.ort.profesionalinvoicemanager.views.HomeCustomFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home_custom" />
    <fragment
        android:id="@+id/nav_clientList"
        android:name="com.ort.profesionalinvoicemanager.views.ui.ClientList.ClientListFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_client_list" />

    <fragment
        android:id="@+id/nav_ProductList"
        android:name="com.ort.profesionalinvoicemanager.views.ui.products.ProductFragmentList"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_product_fragment_list" />
    <fragment
        android:id="@+id/nav_billing"
        android:name="com.ort.profesionalinvoicemanager.views.ui.invoice.BillingFragment"
        android:label="@string/menu_billing"
        tools:layout="@layout/fragment_billing" />
    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.ort.profesionalinvoicemanager.views.StatisticsFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_statistics" />
</navigation>
